// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="false"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="dse-select__caret
          dse-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay false"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base"
      >
        Please select an option ...
      </p>
      <svg
        class="dse-select__caret
          dse-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay dse-select__overlay--open"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Strict Black
        </p>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="false"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base"
      >
        Strict Black
      </p>
      <svg
        class="dse-select__caret
          dse-select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay false"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        class="dse-select__option 
                    dse-select__option--selected
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Strict Black
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-width="{1.5}"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Heavenly Green
        </p>
      </li>
      <li
        class="dse-select__option 
                    
                    
                  "
        role="menuitemradio"
        tabindex="-1"
      >
        <p
          class="dse-text dse-text-base"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
